--- a/Proje/Resources/ViewModel/RegisterVM.tr.resx
+++ b/Proje/Resources/ViewModel/RegisterVM.tr.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Confirm Password" xml:space="preserve">
+    <value>Şifre Doğrulama</value>
+  </data>
   <data name="Confirm Password is required" xml:space="preserve">
     <value>Şifre Doğrulamsı zorunludur </value>
   </data>
@@ -131,6 +134,9 @@
   </data>
   <data name="Full name is required" xml:space="preserve">
     <value>Tam adı zorunludur </value>
+  </data>
+  <data name="password" xml:space="preserve">
+    <value>Şifre</value>
   </data>
   <data name="Password is Invalid" xml:space="preserve">
     <value>Şifre Hatalı</value>
