--- a/Proje/Resources/Views/Home/Index.tr.resx
+++ b/Proje/Resources/Views/Home/Index.tr.resx
@@ -117,16 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Email" xml:space="preserve">
-    <value>Email</value>
+  <data name="And start adding shows to your list" xml:space="preserve">
+    <value>Ve listene yeni dizileri eklemeye başla </value>
   </data>
-  <data name="Login" xml:space="preserve">
-    <value>Login</value>
-  </data>
-  <data name="Password" xml:space="preserve">
-    <value>Password</value>
-  </data>
-  <data name="success" xml:space="preserve">
-    <value>success</value>
+  <data name="Login to your account" xml:space="preserve">
+    <value>Hesabına giriş yap</value>
   </data>
 </root>
