--- a/Proje/Resources/Views/TvShows/Index.tr.resx
+++ b/Proje/Resources/Views/TvShows/Index.tr.resx
@@ -117,10 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="modelerror" xml:space="preserve">
-    <value>model Hatası</value>
+  <data name="Add to List" xml:space="preserve">
+    <value>Listeye Ekle</value>
   </data>
-  <data name="The Anime Could not be added due to some error." xml:space="preserve">
-    <value>Anime bazı hatalar nedeniyle eklenemedi.</value>
+  <data name="Delete" xml:space="preserve">
+    <value>Sil</value>
+  </data>
+  <data name="Details" xml:space="preserve">
+    <value>Detaylar</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Düzenle</value>
+  </data>
+  <data name="Most recent" xml:space="preserve">
+    <value>Son Eklnen</value>
+  </data>
+  <data name="New Series" xml:space="preserve">
+    <value>Yeni Dizi</value>
+  </data>
+  <data name="Number of episodes" xml:space="preserve">
+    <value>Bölümlerin sayısı</value>
+  </data>
+  <data name="Please select an option" xml:space="preserve">
+    <value>Lütfen bir seçenek seçiniz</value>
+  </data>
+  <data name="Rating" xml:space="preserve">
+    <value>Puanlama</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Ara</value>
+  </data>
+  <data name="Sort By" xml:space="preserve">
+    <value>Sırala</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Başlık</value>
   </data>
 </root>
