--- a/Proje/Resources/Views/Account/Register.tr.resx
+++ b/Proje/Resources/Views/Account/Register.tr.resx
@@ -135,7 +135,7 @@
   <data name="Password" xml:space="preserve">
     <value>Şifre</value>
   </data>
-  <data name="Sign up" xml:space="preserve">
+  <data name="Sign Up" xml:space="preserve">
     <value>Kayıt ol</value>
   </data>
   <data name="Sign up a new account" xml:space="preserve">
