--- a/Proje/Resources/Views/TvShows/addShow.tr.resx
+++ b/Proje/Resources/Views/TvShows/addShow.tr.resx
@@ -117,25 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Email" xml:space="preserve">
-    <value>Eposta</value>
+  <data name="Add Series to list" xml:space="preserve">
+    <value>Listeye Dizi ekle</value>
   </data>
-  <data name="Login" xml:space="preserve">
-    <value>Giriş yap</value>
+  <data name="Completed" xml:space="preserve">
+    <value>Tamamlandı </value>
   </data>
-  <data name="Not a user?" xml:space="preserve">
-    <value>Kullanıcı değilmisin ?</value>
+  <data name="Plan to watch" xml:space="preserve">
+    <value>İzlemeye planlıyorum</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>Şifre</value>
+  <data name="Select Status" xml:space="preserve">
+    <value>Durum seçiniz</value>
   </data>
-  <data name="Register" xml:space="preserve">
-    <value>Kayıt ol</value>
+  <data name="Submit" xml:space="preserve">
+    <value>Gönder</value>
   </data>
-  <data name="Sign in" xml:space="preserve">
-    <value>Giriş yap</value>
-  </data>
-  <data name="success" xml:space="preserve">
-    <value>Başarılı</value>
+  <data name="Watching" xml:space="preserve">
+    <value>İzlenmekte</value>
   </data>
 </root>
