added usersApi to the Layout

--- a/Proje/Resources/Views/Animes/MyAnimeList.tr.resx
+++ b/Proje/Resources/Views/Animes/MyAnimeList.tr.resx
@@ -141,6 +141,9 @@
   <data name="Rating" xml:space="preserve">
     <value>Puanlama</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>Ara</value>
+  </data>
   <data name="Sort By" xml:space="preserve">
     <value>Sırala</value>
   </data>
